plugins {
    id 'java'
    id 'eclipse'
}

group = 'yoshikihigo'
version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-cli:commons-cli:1.11.0'
    implementation 'org.xerial:sqlite-jdbc:3.53.4.0'
    implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.46.0'

    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('jar') {
    // ライセンス本文を成果物にも同梱する。MIT は再配布時に著作権表示と
    // 許諾文を残すことを求めるので、jar 単体で配っても条件を満たせる。
    metaInf {
        from rootProject.file('LICENSE')
    }

    manifest {
        attributes(
                'Implementation-Title': 'TinyPDG',
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'Yoshiki Higo',
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'

    // 現在、警告はゼロ。増えたら気づけるようにしておく。
    options.compilerArgs << '-Xlint:all'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()

    // sqlite-jdbc はネイティブライブラリを System.load() で読み込む。
    // JDK 25 では警告止まりだが、将来のリリースでは制限メソッドが
    // ブロックされるため明示的に許可しておく (JEP 472)。
    jvmArgs '--enable-native-access=ALL-UNNAMED'

    // ゴールデン再生成用フラグをテスト JVM へ引き渡す:
    //   ./gradlew test -Dtinypdg.golden=update
    systemProperty 'tinypdg.golden',
            providers.systemProperty('tinypdg.golden').getOrElse('')

    testLogging {
        events 'failed'
        exceptionFormat = 'full'
    }
}
